# ServerViewDemo

./: CMakeLists.txt  Readme.md
include/: ServerListModel.h
qml/: ServerView.qml
source/: ServerListModel.cpp  main.cpp
